# CUDA-evolutionary-algorithm

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Notes.md  README.md  TODO.md
.githooks/: update
.vscode-template/: c_cpp_properties.json  settings.json
dev/: .clang-format  .clangd  README.md  algo_cfg.txt  build-cuda.bat  build-dev-cuda-optim.sh  build-dev-cuda.sh  build-dev-optim.sh  build-dev-win.bat  build-dev.sh  build-sketch-cuda.sh  dev  dev-gpu.cu  dev-scratchbook.hxx  dev.cxx  read_data.py  run-dev.sh  sketch-cuda.cu
dev/include/: algo_utils.hxx  circular_indexer.hxx  common_concepts.hxx  counter.hxx  ea_utils.hxx  error_utils.hxx  file_utils.hxx  indexing_adapter.hxx  io_utils.hxx  iter_utils.hxx  jump_iterator.hxx  matrix_utils.hxx  perf_measure.hxx  permutation.hxx  rnd_utils.hxx  sort_utils.hxx  string_utils.hxx  text.hxx  utils.hxx
dev/include/ev_alg/: crossover.hxx  ea_utils.hxx  ev_alg.hxx  loss.hxx  migration.hxx  mutation.hxx  parameters.hxx  population_generation.hxx  repair.hxx  solution_coders.hxx  stats.hxx  stop_cond.hxx
dev/include/ev_alg_gpu/: crossover.h  ev_alg_gpu.h  loss.h  mutation.h
dev/include/gpu/: combining.cuh  combining.h  errors.cuh  errors.h  errors.hxx  functors.cuh  iterator.cuh  iterator.h  kernel_utils.cuh  kernel_utils.h  numeric.cuh  numeric.h  random.cuh  random.h  reordering.cuh  reordering.h
dev/include/gpu/memory/: allocator.cuh  allocator.h  kernels.cuh  kernels.h  memory.cuh  memory.h
include/: concepts.hxx  cuda_ops.cuh  cuda_raii.cuh  cuda_types.cuh  device_common.cuh  macros.hxx  text.hxx  types.hxx
include/cuda_utils/: cuda_utils.cuh  exceptions.cuh
include/device/: combining.cuh  errors.cuh  functors.cuh  iterator.cuh  kernel_utils.cuh  numeric.cuh  random.cuh  reordering.cuh
include/device/memory/: allocator.cuh  kernels.cuh  memory.cuh
include/device/random/: distributions.cuh  kernels.cuh
include/device/types/: concept.cuh
include/kernels/: functional.cuh  kernels.cuh
include/launchers/: _utils.cuh  functional.cuh  launchers.cuh
include/raii/: adapter.cuh  allocators.cuh  life.cuh  raii.cuh
include/types/: concepts.hxx  traits.hxx  types.hxx
include/utils/: shape.hxx  text.hxx
old/: CMakeLists.txt
old/include/: concepts.hxx  cuda_types.cuh  exceptions.hxx
old/include/kernels/: functional.cuh
old/include/launchers/: _utils.cuh  functional.cuh
old/include/raii/: adapter.cuh  life.cuh  raii.cuh
old/include/utils/: text.hxx
old/src/: check-compute-capability.cu
old2/: CMakeLists.txt  Dockerfile
old2/include/: errors.hxx  text.hxx
old2/include/device/: combining.cuh  errors.cuh  grid.cuh  iterator.cuh  mask.cuh  numeric.cuh  reordering.cuh
old2/include/device/memory/: kernels.cuh  memory.cuh
old2/include/device/types/: types.cuh
old2/include/types/: concepts.hxx
old2/src/: Dev.cu  Dev2.cu
src/: Dev.cu  Dev2.cu  EA.cu  check-compute-capability.cu  hello-cuda.cu
